Działający wybór typu płatności i zmiany w InvoiceDetails zwiazane z wyświetlaniem numeru konta.

--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/InvoiceDetails.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/InvoiceDetails.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:System_do_zarzadzania_obslugi_sprzedazy"
         mc:Ignorable="d"
-        Title="InvoiceDetails" Height="450" Width="800" ResizeMode="NoResize">
-    <Grid Margin="0,-11,-80,-83">
+        Title="InvoiceDetails" Height="504" Width="800" ResizeMode="NoResize">
+    <Grid Margin="0,-11,-80,-83" Height="515" VerticalAlignment="Top">
 
         <Label Content="ID" HorizontalAlignment="Left" Height="37" Margin="10,81,0,0"  VerticalAlignment="Top" Width="54" />
         <Label Content="ID Sprzedawcy" HorizontalAlignment="Left" Height="37" Margin="10,39,0,0"  VerticalAlignment="Top" Width="94" RenderTransformOrigin="0.504,0.045" />
@@ -21,6 +21,7 @@
         <Label Content="Słownie do zapłaty" HorizontalAlignment="Left" Height="37" Margin="387,165,0,0"  VerticalAlignment="Top" Width="121" />
         <Label Content="Zapłacono" HorizontalAlignment="Left" Height="37" Margin="387,226,0,0"  VerticalAlignment="Top" Width="71" RenderTransformOrigin="-0.212,0.387" />
         <Label Content="Nazwa usługi" HorizontalAlignment="Left" Height="37" Margin="387,333,0,0"  VerticalAlignment="Top" Width="106" />
+        <Label x:Name="AccountNumberLabel" Content="Numer konta" HorizontalAlignment="Left" Margin="387,394,0,0" VerticalAlignment="Top" Width="89" RenderTransformOrigin="0.472,1.038"/>
 
 
         <TextBox x:Name="ID" HorizontalAlignment="Center" Height="37" Margin="120,81,465,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
@@ -36,6 +37,9 @@
         <TextBox x:Name="ToPayInWords" HorizontalAlignment="Center" Height="37" Margin="509,164,61,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="224" IsEnabled="False"/>
         <TextBox x:Name="Paid" HorizontalAlignment="Center" Height="37" Margin="509,225,61,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="224" IsEnabled="False"/>
         <TextBox x:Name="NameOfService" HorizontalAlignment="Center" Height="37" Margin="536,333,88,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="224" IsEnabled="False"/>
-        <Button Content="Produkty" HorizontalAlignment="Left" Margin="147,365,0,0" VerticalAlignment="Top" Width="127" Height="45" Click="Button_Click"/>
+        <TextBox x:Name="AccountNumber" HorizontalAlignment="Left" Height="37" TextWrapping="Wrap" VerticalAlignment="Top" Width="224" Margin="549,383,0,0" IsEnabled="False"/>
+        <Button Content="Produkty" HorizontalAlignment="Left" Margin="99,412,0,0" VerticalAlignment="Top" Width="127" Height="45" Click="Button_Click"/>
+
+
     </Grid>
 </Window>
