--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/NewInvoice.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/NewInvoice.xaml
@@ -19,7 +19,7 @@
         <Label Content="Zapłacono" HorizontalAlignment="Left" Height="37" Margin="552,223,0,0"  VerticalAlignment="Top" Width="78" />
         <Label Content="Data wydania" HorizontalAlignment="Left" Height="24" Margin="552,311,0,0"  VerticalAlignment="Top" Width="102" />
         <Label Content="Nazwa usługi" HorizontalAlignment="Left" Height="34" Margin="552,389,0,0"  VerticalAlignment="Top" Width="102" />
-        <Label Content="Numer konta" HorizontalAlignment="Left" Margin="552,461,0,0" VerticalAlignment="Top" Width="87"/>
+        <Label x:Name="AccountNumberLabel" Content="Numer konta" HorizontalAlignment="Left" Margin="552,461,0,0" VerticalAlignment="Top" Width="87"/>
 
 
         <TextBox x:Name="IdSeller" HorizontalAlignment="Center" Height="24" Margin="232,75,954,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="268"/>
