--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/InvoiceDetails.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/InvoiceDetails.xaml
@@ -5,41 +5,43 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:System_do_zarzadzania_obslugi_sprzedazy"
         mc:Ignorable="d"
-        Title="InvoiceDetails" Height="504" Width="800" ResizeMode="NoResize">
-    <Grid Margin="0,-11,-80,-83" Height="515" VerticalAlignment="Top">
+        Title="InvoiceDetails" Height="720" Width="1280" ResizeMode="NoResize">
+    <Grid Margin="0,-11,-80,-59" Height="761" VerticalAlignment="Top" HorizontalAlignment="Left" Width="1354">
 
-        <Label Content="ID" HorizontalAlignment="Left" Height="37" Margin="10,81,0,0"  VerticalAlignment="Top" Width="54" />
-        <Label Content="ID Sprzedawcy" HorizontalAlignment="Left" Height="37" Margin="10,39,0,0"  VerticalAlignment="Top" Width="94" RenderTransformOrigin="0.504,0.045" />
-        <Label Content="ID Firmy" HorizontalAlignment="Left" Height="37" Margin="10,123,0,0"  VerticalAlignment="Top" Width="54" />
-        <Label Content="Data wydania" HorizontalAlignment="Left" Height="37" Margin="387,278,0,0"  VerticalAlignment="Top" Width="89" />
-        <Label Content="Numer" HorizontalAlignment="Left" Height="37" Margin="10,165,0,0"  VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.549,0.046" />
-        <Label Content="Data stworzenia" HorizontalAlignment="Left" Height="37" Margin="10,207,0,0"  VerticalAlignment="Top" Width="98" />
-        <Label Content="Data sprzedaży" HorizontalAlignment="Left" Height="37" Margin="10,249,0,0"  VerticalAlignment="Top" Width="98" RenderTransformOrigin="0.501,-0.474" />
-        <Label Content="Typ płatności" HorizontalAlignment="Left" Height="37" Margin="10,291,0,0"  VerticalAlignment="Top" Width="84" />
-        <Label Content="Termin płatności" HorizontalAlignment="Left" Height="37" Margin="387,39,0,0"  VerticalAlignment="Top" Width="106" />
-        <Label Content="Do zapłaty" HorizontalAlignment="Left" Height="37" Margin="387,100,0,0"  VerticalAlignment="Top" Width="71" />
-        <Label Content="Słownie do zapłaty" HorizontalAlignment="Left" Height="37" Margin="387,165,0,0"  VerticalAlignment="Top" Width="121" />
-        <Label Content="Zapłacono" HorizontalAlignment="Left" Height="37" Margin="387,226,0,0"  VerticalAlignment="Top" Width="71" RenderTransformOrigin="-0.212,0.387" />
-        <Label Content="Nazwa usługi" HorizontalAlignment="Left" Height="37" Margin="387,333,0,0"  VerticalAlignment="Top" Width="106" />
-        <Label x:Name="AccountNumberLabel" Content="Numer konta" HorizontalAlignment="Left" Margin="387,394,0,0" VerticalAlignment="Top" Width="89" RenderTransformOrigin="0.472,1.038"/>
+        <Label Content="ID" HorizontalAlignment="Left" Height="37" Margin="15,81,0,0"  VerticalAlignment="Top" Width="54" />
+        <Label Content="ID Sprzedawcy" HorizontalAlignment="Left" Height="37" Margin="20,39,0,0"  VerticalAlignment="Top" Width="94" RenderTransformOrigin="0.504,0.045" />
+        <Label Content="ID Firmy" HorizontalAlignment="Left" Height="37" Margin="15,123,0,0"  VerticalAlignment="Top" Width="54" />
+        <Label Content="Data wydania" HorizontalAlignment="Left" Height="37" Margin="15,501,0,0"  VerticalAlignment="Top" Width="89" />
+        <Label Content="Numer" HorizontalAlignment="Left" Height="37" Margin="15,165,0,0"  VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.549,0.046" />
+        <Label Content="Data stworzenia" HorizontalAlignment="Left" Height="37" Margin="15,207,0,0"  VerticalAlignment="Top" Width="98" />
+        <Label Content="Data sprzedaży" HorizontalAlignment="Left" Height="37" Margin="15,249,0,0"  VerticalAlignment="Top" Width="98" RenderTransformOrigin="0.501,-0.474" />
+        <Label Content="Typ płatności" HorizontalAlignment="Left" Height="37" Margin="20,296,0,0"  VerticalAlignment="Top" Width="84" />
+        <Label Content="Termin płatności" HorizontalAlignment="Left" Height="37" Margin="15,333,0,0"  VerticalAlignment="Top" Width="106" />
+        <Label Content="Do zapłaty" HorizontalAlignment="Left" Height="37" Margin="15,375,0,0"  VerticalAlignment="Top" Width="71" />
+        <Label Content="Słownie do zapłaty" HorizontalAlignment="Left" Height="37" Margin="15,417,0,0"  VerticalAlignment="Top" Width="121" />
+        <Label Content="Zapłacono" HorizontalAlignment="Left" Height="37" Margin="15,459,0,0"  VerticalAlignment="Top" Width="71" RenderTransformOrigin="-0.212,0.387" />
+        <Label Content="Nazwa usługi" HorizontalAlignment="Left" Height="37" Margin="15,543,0,0"  VerticalAlignment="Top" Width="106" />
+        <Label x:Name="AccountNumberLabel" Content="Numer konta" HorizontalAlignment="Left" Margin="15,603,0,0" VerticalAlignment="Top" Width="89" RenderTransformOrigin="0.472,1.038"/>
 
 
-        <TextBox x:Name="ID" HorizontalAlignment="Center" Height="37" Margin="120,81,465,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
-        <TextBox x:Name="IdSeller" HorizontalAlignment="Center" Height="37" Margin="120,39,465,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
-        <TextBox x:Name="IdCompany" HorizontalAlignment="Center" Height="37" Margin="120,123,465,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
-        <TextBox x:Name="DateOfIssue" HorizontalAlignment="Center" Height="37" Margin="536,278,88,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="224" IsEnabled="False"/>
-        <TextBox x:Name="Number" HorizontalAlignment="Center" Height="37" Margin="147,165,492,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
-        <TextBox x:Name="CreationDate" HorizontalAlignment="Center" Height="37" Margin="147,207,492,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
-        <TextBox x:Name="SaleDate" HorizontalAlignment="Center" Height="37" Margin="147,249,492,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
-        <TextBox x:Name="PaymentType" HorizontalAlignment="Center" Height="37" Margin="147,291,492,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
-        <TextBox x:Name="PaymentDeadline" HorizontalAlignment="Center" Height="37" Margin="509,39,61,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="224" IsEnabled="False"/>
-        <TextBox x:Name="ToPay" HorizontalAlignment="Center" Height="37" Margin="509,99,61,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="224" IsEnabled="False"/>
-        <TextBox x:Name="ToPayInWords" HorizontalAlignment="Center" Height="37" Margin="509,164,61,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="224" IsEnabled="False"/>
-        <TextBox x:Name="Paid" HorizontalAlignment="Center" Height="37" Margin="509,225,61,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="224" IsEnabled="False"/>
-        <TextBox x:Name="NameOfService" HorizontalAlignment="Center" Height="37" Margin="536,333,88,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="224" IsEnabled="False"/>
-        <TextBox x:Name="AccountNumber" HorizontalAlignment="Left" Height="37" TextWrapping="Wrap" VerticalAlignment="Top" Width="224" Margin="549,383,0,0" IsEnabled="False"/>
-        <Button Content="Produkty" HorizontalAlignment="Left" Margin="99,412,0,0" VerticalAlignment="Top" Width="127" Height="45" Click="Button_Click"/>
+        <TextBox x:Name="ID" HorizontalAlignment="Center" Height="37" Margin="176,81,969,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
+        <TextBox x:Name="IdSeller" HorizontalAlignment="Center" Height="37" Margin="176,39,969,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
+        <TextBox x:Name="IdCompany" HorizontalAlignment="Center" Height="37" Margin="176,123,969,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
+        <TextBox x:Name="DateOfIssue" HorizontalAlignment="Center" Height="37" Margin="176,501,969,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
+        <TextBox x:Name="Number" HorizontalAlignment="Center" Height="37" Margin="176,164,969,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
+        <TextBox x:Name="CreationDate" HorizontalAlignment="Center" Height="37" Margin="176,206,969,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
+        <TextBox x:Name="SaleDate" HorizontalAlignment="Center" Height="37" Margin="176,248,969,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
+        <TextBox x:Name="PaymentType" HorizontalAlignment="Center" Height="37" Margin="176,290,969,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
+        <TextBox x:Name="PaymentDeadline" HorizontalAlignment="Center" Height="37" Margin="176,333,969,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
+        <TextBox x:Name="ToPay" HorizontalAlignment="Center" Height="37" Margin="176,375,969,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
+        <TextBox x:Name="ToPayInWords" HorizontalAlignment="Center" Height="37" Margin="176,417,969,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
+        <TextBox x:Name="Paid" HorizontalAlignment="Center" Height="37" Margin="176,459,969,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
+        <TextBox x:Name="NameOfService" HorizontalAlignment="Center" Height="37" Margin="176,543,969,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" IsEnabled="False"/>
+        <TextBox x:Name="AccountNumber" HorizontalAlignment="Left" Height="37" TextWrapping="Wrap" VerticalAlignment="Top" Width="209" Margin="176,592,0,0" IsEnabled="False"/>
 
+        <DataGrid x:Name="InvoiceProductListDataGrid" Margin="566,39,100,78" Background="White" AutoGenerateColumns="True" AutoGeneratingColumn="DataGrid_AutoGeneratingColumn" SelectionMode="Single" GridLinesVisibility="None" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" ColumnWidth="*" IsReadOnly="True" CanUserResizeRows="False"/>
+        <Button x:Name="AddProduct" Content="Dodawanie" HorizontalAlignment="Left" Margin="419,103,0,0" VerticalAlignment="Top" Width="133" Height="50" Click="AddProduct_Click"/>
+        <Button x:Name="DelProduct" Content="Usuwanie" HorizontalAlignment="Left" Margin="419,165,0,0" VerticalAlignment="Top" Width="133" Height="50" Click="DelProduct_Click"/>
 
     </Grid>
 </Window>
