--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/AddNewSeller.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/AddNewSeller.xaml
@@ -11,14 +11,16 @@
             <ColumnDefinition Width="97*"/>
             <ColumnDefinition Width="269*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Orientation="Vertical" HorizontalAlignment="Left" Grid.ColumnSpan="2" >
-            <Label Content="Nazwa/Imię" Width="200" Margin="10,13,0,15" />
-            <Label Content="Nazwisko" Width="200" Margin="10,13,0,15" />
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Left" Grid.ColumnSpan="2" Margin="10,32,0,-33" >
+            <Label x:Name="Name_Label" Width="200" Margin="10,13,0,15" Height="38" >
+                <Label Content="Imie&#xD;&#xA;"/>
+            </Label>
+            <Label x:Name="Surname_Label" Content="Nazwisko" Width="200" Margin="10,13,0,15" />
             <Label Content="Miasto:" Width="200" Margin="10,12,0,15" />
             <Label Content="Ulica:" Width="200" Margin="10,12,0,15" />
             <Label Content="Numer Telefonu:" Width="200" Margin="10,12,0,15" />
-            <Label Content="Nip" Width="200" Margin="10,12,0,15" />
-            <Label Content="REGON:" Width="200" Margin="10,12,0,15" />
+            <Label x:Name="Nip_Label" Content="Nip" Width="200" Margin="10,12,0,15" />
+            <Label x:Name="Regon_Label" Content="REGON:" Width="200" Margin="10,12,0,15" />
 
 
         </StackPanel>
@@ -27,7 +29,7 @@
 
 
 
-        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Margin="24.336,15,204,15" Grid.Column="1">
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Margin="38,40,236,-11" Grid.Column="1">
             <TextBox x:Name="Name" Height="23" Width="300" Margin="10,15,0,15" TextWrapping="Wrap" Text="" HorizontalAlignment ="Center"/>
             <TextBox x:Name="Surname" Height="23" Width="300" Margin="10,15,0,15" TextWrapping="Wrap" Text="" HorizontalAlignment ="Center"/>
             <TextBox x:Name="City" Height="23" Width="300" Margin="10,15,0,15" TextWrapping="Wrap" Text="" HorizontalAlignment ="Center"/>
@@ -39,5 +41,8 @@
 
 
         </StackPanel>
+        <RadioButton x:Name="Person_Choose" Content="Osoba Fizyczna" Grid.Column="1" HorizontalAlignment="Left" Margin="55,20,0,0" VerticalAlignment="Top" Checked="RadioButton_person"/>
+        <RadioButton x:Name="Company_Choose" Content="Firma" Grid.Column="1" HorizontalAlignment="Left" Margin="239,20,0,0" VerticalAlignment="Top" Checked="RadioButton_Company"/>
+        <Label Content="Wybierz" HorizontalAlignment="Left" Margin="26,14,0,0" VerticalAlignment="Top" Width="100"/>
     </Grid>
 </Window>
