--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/NewProduct.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/NewProduct.xaml
@@ -24,7 +24,7 @@
         <Label Content="Cena Netto" HorizontalAlignment="Left" Margin="648,199,0,0" VerticalAlignment="Top" Width="81"/>
         <Label Content="Cena Brutto" HorizontalAlignment="Left" Margin="648,295,0,0" VerticalAlignment="Top" Width="81"/>
         <Label Content="% VAT" HorizontalAlignment="Left" Margin="648,409,0,0" VerticalAlignment="Top" Width="81"/>
-        <ComboBox x:Name="ProductNameComboBox" HorizontalAlignment="Left" Margin="231,299,0,0" VerticalAlignment="Top" Width="256" SelectionChanged="ProductNameComboBox_SelectionChanged" IsTextSearchEnabled="True" IsEditable="True" TextSearch.TextPath="Name" Height="24">
+        <ComboBox x:Name="ProductNameComboBox" HorizontalAlignment="Left" Margin="231,299,0,0" VerticalAlignment="Top" Width="256" SelectionChanged="ProductNameComboBox_SelectionChanged" IsTextSearchEnabled="False" IsEditable="True" IsTabStop="True" TextSearch.TextPath="Name" Height="24" TextBoxBase.TextChanged="ProductNameComboBox_TextChanged" DropDownOpened="ProductNameComboBox_DropDownOpened_1">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
