--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/AddNewSeller.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/AddNewSeller.xaml
@@ -11,11 +11,16 @@
             <ColumnDefinition Width="97*"/>
             <ColumnDefinition Width="269*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Orientation="Vertical" HorizontalAlignment="Left" Grid.ColumnSpan="2" Margin="10,32,0,-33" >
-            <Label x:Name="Name_Label" Width="200" Margin="10,13,0,15" Height="38" >
-                <Label Content="Imie&#xD;&#xA;"/>
-            </Label>
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Left" Margin="10,-7,0,27" Width="200" >
+
+            <Label Content="Wybierz" HorizontalAlignment="Left" Margin="10,14,0,0" VerticalAlignment="Top" Width="116"/>
+
+            <Label x:Name="Name_Label" Content="Imie&#xA;" Width="200" Margin="10,13,-10,15" Height="26" />
+
+
+
             <Label x:Name="Surname_Label" Content="Nazwisko" Width="200" Margin="10,13,0,15" />
+
             <Label Content="Miasto:" Width="200" Margin="10,12,0,15" />
             <Label Content="Ulica:" Width="200" Margin="10,12,0,15" />
             <Label Content="Numer Telefonu:" Width="200" Margin="10,12,0,15" />
@@ -29,7 +34,7 @@
 
 
 
-        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Margin="38,40,236,-11" Grid.Column="1">
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Margin="43,35,223,-11" Grid.Column="1" Width="323">
             <TextBox x:Name="Name" Height="23" Width="300" Margin="10,15,0,15" TextWrapping="Wrap" Text="" HorizontalAlignment ="Center"/>
             <TextBox x:Name="Surname" Height="23" Width="300" Margin="10,15,0,15" TextWrapping="Wrap" Text="" HorizontalAlignment ="Center"/>
             <TextBox x:Name="City" Height="23" Width="300" Margin="10,15,0,15" TextWrapping="Wrap" Text="" HorizontalAlignment ="Center"/>
@@ -37,12 +42,12 @@
             <TextBox x:Name="PhNum" Height="23" Width="300" Margin="10,15,0,15" TextWrapping="Wrap" Text="" HorizontalAlignment ="Center"/>
             <TextBox x:Name="Nip" Height="23" Width="300" Margin="10,15,0,15" TextWrapping="Wrap" Text="" HorizontalAlignment ="Center"/>
             <TextBox x:Name="Regon" Height="23" Width="300" Margin="10,15,0,15" TextWrapping="Wrap" Text="" HorizontalAlignment ="Center"/>
-            <Button x:Name="addSeller" Content="Dodaj" Width="100" Height="40" Margin="15" Click="addSeller_Click"/>
+            <Button x:Name="addSeller" Content="Dodaj" Width="100" Height="40" Margin="13" Click="addSeller_Click"/>
 
 
         </StackPanel>
-        <RadioButton x:Name="Person_Choose" Content="Osoba Fizyczna" Grid.Column="1" HorizontalAlignment="Left" Margin="55,20,0,0" VerticalAlignment="Top" Checked="RadioButton_person"/>
-        <RadioButton x:Name="Company_Choose" Content="Firma" Grid.Column="1" HorizontalAlignment="Left" Margin="239,20,0,0" VerticalAlignment="Top" Checked="RadioButton_Company"/>
-        <Label Content="Wybierz" HorizontalAlignment="Left" Margin="26,14,0,0" VerticalAlignment="Top" Width="100"/>
+        <RadioButton x:Name="Person_Choose" Content="Osoba Fizyczna" Grid.Column="1" HorizontalAlignment="Left" Margin="84,15,0,0" VerticalAlignment="Top" Checked="RadioButton_person"/>
+        <RadioButton x:Name="Company_Choose" Content="Firma" Grid.Column="1" HorizontalAlignment="Left" Margin="272,15,0,0" VerticalAlignment="Top" Checked="RadioButton_Company"/>
+
     </Grid>
 </Window>
