--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/MainWindow.xaml
@@ -35,10 +35,20 @@
         <Button x:Name="RemoveUser" Content="Usuń Fakturę" HorizontalAlignment="Left" Margin="145,8,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Remove_User"/>
         <Button x:Name="Print" Content="Drukuj" HorizontalAlignment="Left" Margin="1024,8,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Print_Open" RenderTransformOrigin="0.481,-0.462"/>
         <Button x:Name="Search" Content="Znajdź" HorizontalAlignment="Left" Margin="1133,8,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Search_Open"/>
-        <Calendar x:Name="Calendar" HorizontalAlignment="Left" Margin="36,26,0,0" Grid.Row="2" VerticalAlignment="Top" Height="179" Width="197" Grid.RowSpan="2"/>
-        <DataGrid x:Name="StorageDG" HorizontalAlignment="Left" Height="536" Margin="277,26,0,0" Grid.Row="2" VerticalAlignment="Top" Width="975" Grid.RowSpan="2"/>
-        <ComboBox x:Name="OperationCB" HorizontalAlignment="Left" Margin="46,281,0,0" Grid.Row="3" VerticalAlignment="Top" Width="177" Height="29"/>
-        <RadioButton x:Name="InvoiceRB" Content="Faktury" HorizontalAlignment="Left" Margin="36,200,0,0" Grid.Row="3" VerticalAlignment="Top"/>
-        <RadioButton x:Name="StorageRB" Content="Magazyn" HorizontalAlignment="Left" Margin="156,197,0,0" Grid.Row="3" VerticalAlignment="Top"/>
+        <DataGrid x:Name="StorageDG" AutoGenerateColumns="True" Background="White" AutoGeneratingColumn="CompanyDataGrid_AutoGeneratingColumn" SelectionMode="Single" GridLinesVisibility="None" HorizontalAlignment="Left" Height="536" Margin="277,26,0,0" Grid.Row="2" VerticalAlignment="Top" Width="975" Grid.RowSpan="2" VerticalContentAlignment="Stretch" ColumnWidth="*" IsReadOnly="True" CanUserResizeRows="False"/>
+        <ComboBox x:Name="OperationCB" SelectedIndex="4"  HorizontalAlignment="Left" Margin="62,280,0,0" Grid.Row="3" VerticalAlignment="Top" Width="187" Height="29" SelectionChanged="OperationCB_SelectionChanged">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding }"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+
+        <RadioButton x:Name="InvoiceRB" Content="Faktury" HorizontalAlignment="Left" Margin="62,200,0,0" Grid.Row="3" VerticalAlignment="Top"/>
+        <RadioButton x:Name="StorageRB" IsChecked="True" Content="Magazyn" HorizontalAlignment="Left" Margin="182,200,0,0" Grid.Row="3" VerticalAlignment="Top"/>
+        <DatePicker x:Name="DateFrom" HorizontalAlignment="Left"  Margin="62,52,0,0"  Grid.Row="3" VerticalAlignment="Top" Width="187" Height="25"/>
+        <DatePicker x:Name="DateTo" HorizontalAlignment="Left" Margin="62,109,0,0"  Grid.Row="3" VerticalAlignment="Top" Width="187"/>
     </Grid>
 </Window>
