--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/MainWindow.xaml
@@ -61,8 +61,8 @@
 
         <RadioButton x:Name="InvoiceRB" Content="Faktury" HorizontalAlignment="Left" Margin="62,200,0,0" Grid.Row="3" VerticalAlignment="Top" Checked="InvoiceRB_Checked"/>
         <RadioButton x:Name="StorageRB" IsChecked="True" Content="Magazyn" HorizontalAlignment="Left" Margin="182,200,0,0" Grid.Row="3" VerticalAlignment="Top" Checked="StorageRB_Checked"/>
-        <DatePicker x:Name="DateFrom" HorizontalAlignment="Left"  Margin="62,52,0,0"  Grid.Row="3" VerticalAlignment="Top" Width="187" Height="25"/>
-        <DatePicker x:Name="DateTo" HorizontalAlignment="Left" Margin="62,109,0,0"  Grid.Row="3" VerticalAlignment="Top" Width="187"/>
+        <DatePicker x:Name="DateFrom" HorizontalAlignment="Left"  Margin="62,52,0,0"  Grid.Row="3" VerticalAlignment="Top" Width="187" Height="25" SelectedDateChanged="DateFrom_SelectedDateChanged"/>
+        <DatePicker x:Name="DateTo" HorizontalAlignment="Left" Margin="62,109,0,0"  Grid.Row="3" VerticalAlignment="Top" Width="187" SelectedDateChanged="DateTo_SelectedDateChanged"/>
         <Button x:Name="Filter" Content="Filtruj" Visibility="Hidden" HorizontalAlignment="Left" Margin="84,280,0,0" Grid.Row="3" VerticalAlignment="Top" Width="129" Height="29" Click="Filter_Click"/>
         <DataGrid x:Name="InvoiceDG" Visibility="Hidden" AutoGenerateColumns="True" Background="White" AutoGeneratingColumn="CompanyDataGrid_AutoGeneratingColumn" SelectionMode="Single" GridLinesVisibility="None" HorizontalAlignment="Left" Height="536" Margin="277,26,0,0" Grid.Row="2" VerticalAlignment="Top" Width="975" Grid.RowSpan="2" VerticalContentAlignment="Stretch" ColumnWidth="*" IsReadOnly="True" CanUserResizeRows="False">
             
