--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/MainWindow.xaml
@@ -35,7 +35,7 @@
         <Button x:Name="RemoveUser" Content="Usuń Fakturę" HorizontalAlignment="Left" Margin="145,8,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Remove_User"/>
         <Button x:Name="Print" Content="Drukuj" HorizontalAlignment="Left" Margin="1024,8,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Print_Open" RenderTransformOrigin="0.481,-0.462"/>
         <Button x:Name="Search" Content="Znajdź" HorizontalAlignment="Left" Margin="1133,8,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Search_Open"/>
-        <DataGrid x:Name="StorageDG" AutoGenerateColumns="True" Background="White" AutoGeneratingColumn="CompanyDataGrid_AutoGeneratingColumn" SelectionMode="Single" GridLinesVisibility="None" HorizontalAlignment="Left" Height="536" Margin="277,26,0,0" Grid.Row="2" VerticalAlignment="Top" Width="975" Grid.RowSpan="2" VerticalContentAlignment="Stretch" ColumnWidth="*" IsReadOnly="True" CanUserResizeRows="False">
+        <DataGrid x:Name="StorageDG" AutoGenerateColumns="True" Background="White" AutoGeneratingColumn="CompanyDataGrid_AutoGeneratingColumn" SelectionMode="Single" GridLinesVisibility="None" HorizontalAlignment="Left" Height="536" Margin="277,26,0,0" Grid.Row="2" VerticalAlignment="Top" Width="975" Grid.RowSpan="2" VerticalContentAlignment="Stretch" ColumnWidth="*" IsReadOnly="True" CanUserResizeRows="False" RowDetailsVisibilityMode="Visible">
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
                     <Style.Triggers>
@@ -48,7 +48,13 @@
                     </Style.Triggers>
                 </Style>
             </DataGrid.RowStyle>
+            <DataGrid.RowDetailsTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding InvoiceProducts}" Margin="10" />
+                </DataTemplate>
+            </DataGrid.RowDetailsTemplate>
         </DataGrid>
+        
         <ComboBox x:Name="OperationCB" SelectedIndex="4"  HorizontalAlignment="Left" Margin="62,280,0,0" Grid.Row="3" VerticalAlignment="Top" Width="187" Height="29" SelectionChanged="OperationCB_SelectionChanged">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
