--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/MainWindow.xaml
@@ -72,9 +72,19 @@
         <Button x:Name="Filter" Content="Filtruj" Visibility="Hidden" HorizontalAlignment="Left" Margin="84,280,0,0" Grid.Row="3" VerticalAlignment="Top" Width="129" Height="29" Click="Filter_Click"/>
         <DataGrid x:Name="InvoiceDG" Visibility="Hidden" AutoGenerateColumns="True" Background="White" AutoGeneratingColumn="CompanyDataGrid_AutoGeneratingColumn" SelectionMode="Single" GridLinesVisibility="None" HorizontalAlignment="Left" Height="536" Margin="277,26,0,0" Grid.Row="2" VerticalAlignment="Top" Width="975" Grid.RowSpan="2" VerticalContentAlignment="Stretch" ColumnWidth="*" IsReadOnly="True" CanUserResizeRows="False">
         </DataGrid>
-        <DataGrid x:Name="GridSettelmentIncome" HorizontalAlignment="Left" Height="510" Margin="254,0,0,0" Grid.Row="3" VerticalAlignment="Top" Width="460"/>
-        <DataGrid x:Name="GridSettelmentDebt" HorizontalAlignment="Left" Height="510" Margin="740,0,0,0" Grid.Row="3" VerticalAlignment="Top" Width="497"/>
-        <DatePicker x:Name="DateSettelmentFrom" HorizontalAlignment="Left" Height="29" Margin="36,18,0,0" Grid.Row="3" VerticalAlignment="Top" Width="213"/>
-        <DatePicker x:Name="DateSettelmentTo" HorizontalAlignment="Left" Height="27" Margin="36,77,0,0" Grid.Row="3" VerticalAlignment="Top" Width="213"/>
+        <DataGrid x:Name="GridSettelmentIncome" AutoGenerateColumns="False" Height="510" Background="White" Margin="254,0,0,0" Grid.Row="3" VerticalAlignment="Top" Width="460"  SelectionMode="Single" GridLinesVisibility="None" HorizontalAlignment="Left" Grid.RowSpan="2" VerticalContentAlignment="Stretch" ColumnWidth="*" IsReadOnly="True" CanUserResizeRows="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Numer faktury" Binding="{Binding Number}"/>
+                <DataGridTextColumn Header="Data wystawienia" Binding="{Binding CreationDate}"/>
+                <DataGridTextColumn Header="Do zapłaty" Binding="{Binding ToPay}"/>
+                <DataGridTextColumn Header="Zapłacono" Binding="{Binding Paid}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+
+
+
+        <DataGrid x:Name="GridSettelmentDebt" AutoGeneratingColumn="CompanyDataGrid_AutoGeneratingColumn" Height="510" Margin="740,0,0,0" Grid.Row="3" VerticalAlignment="Top" Width="497"  Background="White"  SelectionMode="Single" GridLinesVisibility="None" HorizontalAlignment="Left" Grid.RowSpan="2" VerticalContentAlignment="Stretch" ColumnWidth="*" IsReadOnly="True" CanUserResizeRows="False"/>
+        <DatePicker x:Name="DateSettelmentFrom" HorizontalAlignment="Left" Height="28" Margin="47,35,0,0" Grid.Row="3" VerticalAlignment="Top" Width="187" SelectedDateChanged="DateSettelmentFrom_SelectedDateChanged"/>
+        <DatePicker x:Name="DateSettelmentTo" HorizontalAlignment="Left" Height="27" Margin="47,106,0,0" Grid.Row="3" VerticalAlignment="Top" Width="187" SelectedDateChanged="DateSettelmentTo_SelectedDateChanged"/>
     </Grid>
 </Window>
