--- a/System_do_zarzadzania_obslugi_sprzedazy/Winows/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Winows/MainWindow.xaml
@@ -83,7 +83,7 @@
 
 
 
-        <DataGrid x:Name="GridSettelmentDebt" AutoGeneratingColumn="CompanyDataGrid_AutoGeneratingColumn" Height="510" Margin="740,0,0,0" Grid.Row="3" VerticalAlignment="Top" Width="497"  Background="White"  SelectionMode="Single" GridLinesVisibility="None" HorizontalAlignment="Left" Grid.RowSpan="2" VerticalContentAlignment="Stretch" ColumnWidth="*" IsReadOnly="True" CanUserResizeRows="False"/>
+        <DataGrid x:Name="GridSettelmentDebt" AutoGeneratingColumn="CompanyDataGrid_AutoGeneratingColumn" Height="510" Margin="740,0,0,0" Grid.Row="3" VerticalAlignment="Top" Width="497"  Background="White"  SelectionMode="Single" GridLinesVisibility="None" HorizontalAlignment="Left" Grid.RowSpan="2" VerticalContentAlignment="Stretch" ColumnWidth="*" IsReadOnly="True" CanUserResizeRows="False" MouseDoubleClick="DoubleClickDebt_Open"/>
         <DatePicker x:Name="DateSettelmentFrom" HorizontalAlignment="Left" Height="28" Margin="47,35,0,0" Grid.Row="3" VerticalAlignment="Top" Width="187" SelectedDateChanged="DateSettelmentFrom_SelectedDateChanged"/>
         <DatePicker x:Name="DateSettelmentTo" HorizontalAlignment="Left" Height="27" Margin="47,106,0,0" Grid.Row="3" VerticalAlignment="Top" Width="187" SelectedDateChanged="DateSettelmentTo_SelectedDateChanged"/>
     </Grid>
